@@ -1,4 +1,13 @@
 2009-03-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+	    Peter Rosin  <peda@lysator.liu.se>
+
+	Fix w32 path handling in the `compile' script.
+	* lib/compile: Handle colons and backslashes in win32 paths.
+	* tests/compile2.test: New test.
+	* tests/Makefile.am: Update.
+	Report and initial patch by Peter Rosin.
+
+2009-03-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix `use constant' usage for MSYS Perl 5.6.0.
 	* automake.in (QUEUE_MESSAGE, QUEUE_CONF_FILE, QUEUE_LOCATION)
